Unify plugin name

--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 
-PLG_SYSTEM_PBANALYTICS="System - Webanalyse"
+PLG_SYSTEM_PBANALYTICS="System - Analytics"
 PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="<p>Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (formerly Piwik)</strong> ein.</p><p>Über den Shortcode <code>{plg_system_pbanalytics_optout}</code> in einem Artikel kann man einen Opt Out-Link anzeigen.</p><p>Unter <a href=\"index.php?option=com_languages&view=overrides&filter_language_client=en-GB1\">Erweiterungen &gt; Sprachen: Overrides (Administrator)</a> können folgende Textbausteine angepasst werden: <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</code> und <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</code></p>"
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
