--- a/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
+++ b/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 
-PLG_SYSTEM_PBANALYTICS="System - Web Analytics"
+PLG_SYSTEM_PBANALYTICS="System - Analytics"
 PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="<p>This plugin inserts the tracking code for <strong>Google Analytics</strong> and <strong>Matomo (formerly Piwik)</strong>.</p><p>Place the shortcode <code>{plg_system_pbanalytics_optout}</code> in your article to show an opt out-link.</p><p>On <a href=\"index.php?option=com_languages&view=overrides&filter_language_client=en-GB1\">Extensions &gt; Languages: Overrides (Administrator)</a> these texts can be adapted: <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</code> and <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</code></p>"
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
