--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.sys.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License version 2 or later
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_SYSTEM_PBANALYTICS="System - Web Analytics"
+PLG_SYSTEM_PBANALYTICS="System - Analytics"
 PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="This plugin inserts the tracking code for <strong>Google Analytics</strong> and <strong>Matomo (formerly Piwik)</strong>. Don't forget to <a href=\"index.php?option=com_plugins&amp;filter[enabled]=0&amp;filter[folder]=system\">enable plugin</a>!"
