Quote language strings

--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
@@ -5,7 +5,7 @@
 
 
 PLG_SYSTEM_PBANALYTICS="System - Analytics"
-PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="<p>Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (formerly Piwik)</strong> ein.</p><p>Über den Shortcode <code>{plg_system_pbanalytics_optout}</code> in einem Artikel kann man einen Opt Out-Link anzeigen.</p><p>Unter <a href=\"index.php?option=com_languages&view=overrides&filter_language_client=en-GB1\">Erweiterungen &gt; Sprachen: Overrides (Administrator)</a> können folgende Textbausteine angepasst werden: <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</code> und <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</code></p>"
+PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="<p>Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (formerly Piwik)</strong> ein.</p><p>Über den Shortcode <code>{plg_system_pbanalytics_optout}</code> in einem Artikel kann man einen Opt Out-Link anzeigen.</p><p>Unter <a href="_QQ_"index.php?option=com_languages&view=overrides&language_client=de-DE1"_QQ_">Erweiterungen &gt; Sprachen: Overrides (Administrator)</a> können folgende Textbausteine angepasst werden: <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</code> und <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</code></p>"
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_DESCRIPTION="Zeigt einen Opt Out-Link an, um das Tracking seitenweit zu deaktivieren. Um den Link zu nutzen muss der Shortcode in einem Artikel eingefügt werden."
@@ -32,5 +32,5 @@ PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_IMAGE="Bild"
 
 PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE="Datenerfassung deaktivieren"
 PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE="Datenerfassung aktivieren"
-PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED=" <strong style=\"color:red;\">[ deaktiviert ]</strong> "
-PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED=" <strong style=\"color:green;\">[ aktiviert ]</strong> "
+PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED=" <strong style="_QQ_"color:red;"_QQ_">[ deaktiviert ]</strong> "
+PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED=" <strong style="_QQ_"color:green;"_QQ_">[ aktiviert ]</strong> "
