--- a/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
+++ b/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
@@ -5,7 +5,7 @@
 
 
 PLG_SYSTEM_PBANALYTICS="System - Analytics"
-PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="<p>This plugin inserts the tracking code for <strong>Google Analytics</strong> and <strong>Matomo (formerly Piwik)</strong>.</p><p>Place the shortcode <code>{plg_system_pbanalytics_optout}</code> in your article to show an opt out-link.</p><p>On <a href=\"index.php?option=com_languages&view=overrides&filter_language_client=en-GB1\">Extensions &gt; Languages: Overrides (Administrator)</a> these texts can be adapted: <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</code> and <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</code></p>"
+PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="<p>This plugin inserts the tracking code for <strong>Google Analytics</strong> and <strong>Matomo (formerly Piwik)</strong>.</p><p>Place the shortcode <code>{plg_system_pbanalytics_optout}</code> in your article to show an opt out-link.</p><p>On <a href="_QQ_"index.php?option=com_languages&view=overrides&language_client=en-GB1"_QQ_">Extensions &gt; Languages: Overrides (Administrator)</a> these texts can be adapted: <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</code>, <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</code> and <code>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</code></p>"
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_DESCRIPTION="Shows an opt out-link to disable the tracking sitewide. To use it place the shortcode anywhere in your article."
@@ -32,5 +32,5 @@ PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_IMAGE="Image"
 
 PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE="Disable Analytics"
 PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE="Enable Analytics"
-PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED=" <strong style=\"color:red;\">[ disabled ]</strong> "
-PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED=" <strong style=\"color:green;\">[ enabled ]</strong> "
+PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED=" <strong style="_QQ_"color:red;"_QQ_">[ disabled ]</strong> "
+PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED=" <strong style="_QQ_"color:green;"_QQ_">[ enabled ]</strong> "
