--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.sys.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.sys.ini
@@ -4,4 +4,4 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_SYSTEM_PBANALYTICS="System - Analytics"
-PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="This plugin inserts the tracking code for <strong>Google Analytics</strong> and <strong>Matomo (formerly Piwik)</strong>. Don't forget to <a href=\"index.php?option=com_plugins&amp;filter[enabled]=0&amp;filter[folder]=system\">enable plugin</a>!"
+PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (formerly Piwik)</strong> ein. Nicht vergessen das <a href="_QQ_"index.php?option=com_plugins&amp;filter[enabled]=0&amp;filter[folder]=system"_QQ_">Plugin zu aktivieren</a>!"
