--- a/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
+++ b/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
@@ -5,7 +5,7 @@
 
 
 PLG_SYSTEM_PBANALYTICS="System - Analytics"
-PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="This plugin inserts the tracking code for <strong>Google Analytics</strong> and <strong>Matomo (formerly Piwik)</strong>."
+PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="This plugin inserts the tracking code for <strong>Google Analytics</strong> and <strong>Matomo (formerly Piwik)</strong>. <strong>Enable plugin</strong> to use it!"
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_DESCRIPTION="Shows an opt out-link to disable the tracking sitewide. To use it place the shortcode anywhere in your article."
