--- a/src/language/en-GB/en-GB.plg_system_pbanalytics.sys.ini
+++ b/src/language/en-GB/en-GB.plg_system_pbanalytics.sys.ini
@@ -5,3 +5,5 @@
 
 PLG_SYSTEM_PBANALYTICS="System - Analytics"
 PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="This plugin inserts the tracking code for <strong>Google Analytics</strong> and <strong>Matomo (formerly Piwik)</strong>. Don't forget to <a href="_QQ_"index.php?option=com_plugins&amp;filter[enabled]=0&amp;filter[folder]=system"_QQ_">enable plugin</a>!"
+
+PLG_SYSTEM_PBANALYTICS_INSTALL_MESSAGE="Don't forget to <a href=\"index.php?option=com_plugins&amp;filter[enabled]=0&amp;filter[folder]=system\"><u>enable plugin</u></a>!"
