--- a/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
+++ b/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
@@ -9,7 +9,7 @@ PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="This plugin inserts the tracking code fo
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_DESCRIPTION="Shows an opt out-link to disable the tracking sitewide. To use it place the shortcode anywhere in your article."
-PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_NOTE="<p>Place the shortcode <code>{plg_system_pbanalytics_optout}</code> in your article to show an opt out-link.</p><p>On <a href="_QQ_"index.php?option=com_languages&view=overrides&language_client=en-GB1"_QQ_">Extensions &gt; Languages: Overrides (Administrator)</a> these texts can be adapted: <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</em> and <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</em>.</p>
+PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_NOTE="<p>Place the shortcode <code>{plg_system_pbanalytics_optout}</code> in your article to show an opt out-link.</p><p>On <a href="_QQ_"index.php?option=com_languages&view=overrides&language_client=en-GB0"_QQ_">Extensions &gt; Languages: Overrides</a> these texts can be adapted: <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</em> and <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</em>.</p>
 
 COM_PLUGINS_SYSTEM_PBANALYTICS_GOOGLE_FIELDSET_LABEL="Google Analytics"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_PROPERTY_LABEL="Property ID"
