Highlight links within info alert

--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
@@ -9,7 +9,7 @@ PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="Dieses Plugin fügt einen Tracking-Code 
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_DESCRIPTION="Zeigt einen Opt Out-Link an, um das Tracking seitenweit zu deaktivieren. Um den Link zu nutzen muss der Shortcode in einem Artikel eingefügt werden."
-PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_NOTE="<p>Über den Shortcode <code>{plg_system_pbanalytics_optout}</code> in einem Artikel kann man einen Opt Out-Link anzeigen.</p><p>Unter <a href="_QQ_"index.php?option=com_languages&view=overrides&language_client=de-DE0"_QQ_">Erweiterungen &gt; Sprachen: Overrides</a> können folgende Textbausteine angepasst werden: <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</em> und <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</em>.</p>"
+PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_NOTE="<p>Über den Shortcode <code>{plg_system_pbanalytics_optout}</code> in einem Artikel kann man einen Opt Out-Link anzeigen.</p><p>Unter <a href="_QQ_"index.php?option=com_languages&view=overrides&language_client=de-DE0"_QQ_"><u>Erweiterungen &gt; Sprachen: Overrides</u></a> können folgende Textbausteine angepasst werden: <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</em> und <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</em>.</p>"
 
 COM_PLUGINS_SYSTEM_PBANALYTICS_GOOGLE_FIELDSET_LABEL="Google Analytics"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_PROPERTY_LABEL="Property ID"
