Hightlight enabling hint

--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
@@ -5,7 +5,7 @@
 
 
 PLG_SYSTEM_PBANALYTICS="System - Analytics"
-PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (formerly Piwik)</strong> ein. <strong>Plugin aktivieren</strong> um es einzusetzen!"
+PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (formerly Piwik)</strong> ein. <strong class="_QQ_"label label-info"_QQ_">Plugin aktivieren um es einzusetzen!</strong>"
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_DESCRIPTION="Zeigt einen Opt Out-Link an, um das Tracking seitenweit zu deaktivieren. Um den Link zu nutzen muss der Shortcode in einem Artikel eingefügt werden."
