Minor language corrections

--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
@@ -3,9 +3,8 @@
 ; License GNU General Public License version 2 or later
 ; Note : All ini files need to be saved as UTF-8
 
-
 PLG_SYSTEM_PBANALYTICS="System - Analytics"
-PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (formerly Piwik)</strong> ein. <strong class="_QQ_"label label-info"_QQ_">Plugin aktivieren um es einzusetzen!</strong>"
+PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (ehemals Piwik)</strong> ein. <strong class="_QQ_"label label-info"_QQ_">Plugin aktivieren um es einzusetzen!</strong>"
 
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_DESCRIPTION="Zeigt einen Opt Out-Link an, um das Tracking seitenweit zu deaktivieren. Um den Link zu nutzen muss der Shortcode in einem Artikel eingefügt werden."
@@ -18,14 +17,14 @@ PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_ANONYMIZE_LABEL="IP anonymisieren"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_ANONYMIZE_DESCRIPTION="Anonymisiert die IP-Adressen der gesendeten Daten bei Google Analytics."
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_LABEL="Tracking"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_DESCRIPTION="Tracking-Code auswählen."
-PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_GTAG="GLobaler Seiten-Tag (gtag.js)"
+PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_GTAG="Globaler Seiten-Tag (gtag.js)"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_ANALYTICS="Asynchrones Tracking (analytics.js)"
 
 COM_PLUGINS_SYSTEM_PBANALYTICS_MATOMO_FIELDSET_LABEL="Matomo (ehemals Piwik)"
 PLG_SYSTEM_PBANALYTICS_MATOMO_SERVER_LABEL="Server"
 PLG_SYSTEM_PBANALYTICS_MATOMO_SERVER_DESCRIPTION="Server angeben auf dem Matomo installiert ist."
 PLG_SYSTEM_PBANALYTICS_MATOMO_SITEID_LABEL="Seiten-ID"
-PLG_SYSTEM_PBANALYTICS_MATOMO_SITEID_DESCRIPTION="Seiten-Id der in Matomo konfigurierten Seite."
+PLG_SYSTEM_PBANALYTICS_MATOMO_SITEID_DESCRIPTION="Seiten-ID wie in Matomo konfiguriert angeben."
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_LABEL="Tracking"
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_DESCRIPTION="Tracking-Code auswählen."
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_JAVASCRIPT="Javascript"
