--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.sys.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.sys.ini
@@ -4,6 +4,6 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_SYSTEM_PBANALYTICS="System - Analytics"
-PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (formerly Piwik)</strong> ein."
+PLG_SYSTEM_PBANALYTICS_XML_DESCRIPTION="Dieses Plugin fügt einen Tracking-Code für <strong>Google Analytics</strong> und <strong>Matomo (ehemals Piwik)</strong> ein."
 
-PLG_SYSTEM_PBANALYTICS_INSTALL_MESSAGE="Nicht vergessen das <a href="_QQ_"index.php?option=com_plugins&amp;filter[enabled]=0&amp;filter[folder]=system"_QQ_">Plugin zu aktivieren</a>!"
+PLG_SYSTEM_PBANALYTICS_INSTALL_MESSAGE="Nicht vergessen das <a href="_QQ_"index.php?option=com_plugins&amp;filter[enabled]=0&amp;filter[folder]=system"_QQ_"><u>Plugin zu aktivieren</u></a>!"
