--- a/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
+++ b/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
@@ -10,9 +10,17 @@ PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_LABEL="Opt Out"
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_DESCRIPTION="Shows an opt out-link to disable the tracking sitewide. To use it place the shortcode anywhere in your article."
 PLG_SYSTEM_PBANALYTICS_OPTION_OPTOUT_NOTE="<p>Place the shortcode <code>{plg_system_pbanalytics_optout}</code> in your article to show an opt out-link.</p><p>On <a href="_QQ_"index.php?option=com_languages&view=overrides&language_client=en-GB0"_QQ_"><u>Extensions &gt; Languages: Overrides</u></a> these texts can be adapted: <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE</em>, <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLED</em> and <em>PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLED</em>.</p>
 
+COM_PLUGINS_SYSTEM_PBANALYTICS_TAGMANAGER_FIELDSET_LABEL="Google Tag Manager"
+PLG_SYSTEM_PBANALYTICS_TAGMANAGER_CONTAINER_LABEL="Container-ID"
+PLG_SYSTEM_PBANALYTICS_TAGMANAGER_CONTAINER_DESCRIPTION="Insert the container-ID (e.g. GTM-XXXX) configured in Google Tag Manager."
+PLG_SYSTEM_PBANALYTICS_TAGMANAGER_OPTION_CODE_LABEL="Tracking"
+PLG_SYSTEM_PBANALYTICS_TAGMANAGER_OPTION_CODE_DESCRIPTION="Choose the tracking technology."
+PLG_SYSTEM_PBANALYTICS_TAGMANAGER_OPTION_CODE_JAVASCRIPT="Javascript"
+PLG_SYSTEM_PBANALYTICS_TAGMANAGER_OPTION_CODE_IFRAME="iFrame"
+
 COM_PLUGINS_SYSTEM_PBANALYTICS_GOOGLE_FIELDSET_LABEL="Google Analytics"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_PROPERTY_LABEL="Property ID"
-PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_PROPERTY_DESCRIPTION="Choose the property ID (e.g. UA-XXXX-Y) configured in Google Analytics."
+PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_PROPERTY_DESCRIPTION="Insert the property ID (e.g. UA-XXXX-Y) configured in Google Analytics."
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_ANONYMIZE_LABEL="Anonymize IP"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_ANONYMIZE_DESCRIPTION="Anonymize the IP addresses of hits sent to Google Analytics."
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_LABEL="Tracking"
@@ -24,7 +32,7 @@ COM_PLUGINS_SYSTEM_PBANALYTICS_MATOMO_FIELDSET_LABEL="Matomo (formerly Piwik)"
 PLG_SYSTEM_PBANALYTICS_MATOMO_SERVER_LABEL="Server"
 PLG_SYSTEM_PBANALYTICS_MATOMO_SERVER_DESCRIPTION="Add the server where Matomo is installed on."
 PLG_SYSTEM_PBANALYTICS_MATOMO_SITEID_LABEL="Site-ID"
-PLG_SYSTEM_PBANALYTICS_MATOMO_SITEID_DESCRIPTION="Choose the ID of the website configures in Matomo."
+PLG_SYSTEM_PBANALYTICS_MATOMO_SITEID_DESCRIPTION="Insert the ID of the website configures in Matomo."
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_LABEL="Tracking"
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_DESCRIPTION="Choose the tracking technology."
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_JAVASCRIPT="Javascript"
