Track downloads in Google Analytics
Added new option to track clicks on download links as page view. All allowed file extensions from the media configuration are recognized.

--- a/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
+++ b/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
@@ -27,6 +27,9 @@ PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_LABEL="Tracking"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_DESCRIPTION="Choose the tracking technology."
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_GTAG="Global site tag (gtag.js)"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_ANALYTICS="Asynchronous Tracking (analytics.js)"
+PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_DONWLOADS_LABEL="Track Downloads"
+PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_DONWLOADS_DESCRIPTION="Track every click on hyperlinks pointing to files as given in the media configuration."
+PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_DOWNLOADS_PAGEVIEW="Page View"
 
 COM_PLUGINS_SYSTEM_PBANALYTICS_MATOMO_FIELDSET_LABEL="Matomo (formerly Piwik)"
 PLG_SYSTEM_PBANALYTICS_MATOMO_SERVER_LABEL="Server"
