--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
@@ -27,6 +27,9 @@ PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_LABEL="Tracking"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_DESCRIPTION="Tracking-Code auswählen."
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_GTAG="Globaler Seiten-Tag (gtag.js)"
 PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_CODE_ANALYTICS="Asynchrones Tracking (analytics.js)"
+PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_DONWLOADS_LABEL="Downloads aufzeichnen"
+PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_DONWLOADS_DESCRIPTION="Jeden Klick auf verlinke Dateien aufzeichnen die in der Medien-Konfiguration angegeben sind."
+PLG_SYSTEM_PBANALYTICS_GOOGLE_OPTION_DOWNLOADS_PAGEVIEW="Seitenaufruf"
 
 COM_PLUGINS_SYSTEM_PBANALYTICS_MATOMO_FIELDSET_LABEL="Matomo (ehemals Piwik)"
 PLG_SYSTEM_PBANALYTICS_MATOMO_SERVER_LABEL="Server"
