Add option to use Matomo without cookies

--- a/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
+++ b/src/language/en-GB/en-GB.plg_system_pbanalytics.ini
@@ -40,6 +40,8 @@ PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_LABEL="Tracking"
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_DESCRIPTION="Choose the tracking technology."
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_JAVASCRIPT="Javascript"
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_IMAGE="Image"
+PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_COOKIES_LABEL="Cookies"
+PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_COOKIES_DESCRIPTION="Use cookies for the tracking with Matomo."
 
 PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE="Disable Analytics"
 PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE="Enable Analytics"
