--- a/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
+++ b/src/language/de-DE/de-DE.plg_system_pbanalytics.ini
@@ -40,6 +40,8 @@ PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_LABEL="Tracking"
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_DESCRIPTION="Tracking-Code auswählen."
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_JAVASCRIPT="Javascript"
 PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_CODE_IMAGE="Bild"
+PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_COOKIES_LABEL="Cookies"
+PLG_SYSTEM_PBANALYTICS_MATOMO_OPTION_COOKIES_DESCRIPTION="Cookies bei der Erfassung in Matomo verwenden."
 
 PLG_SYSTEM_PBANALYTICS_PRIVACY_DISABLE="Datenerfassung deaktivieren"
 PLG_SYSTEM_PBANALYTICS_PRIVACY_ENABLE="Datenerfassung aktivieren"
